add all changes

--- a/views/create-event.html
+++ b/views/create-event.html
@@ -21,22 +21,24 @@
     <input type="text" name="location">
     <p></p>
     <label for="image">Event image:</label>
-    <input type="text" name="image">
+    <input type="url" name="image">
     <p></p>
     <label for="year">Event year:</label>
-    <input type="text" name="year">
+    <input type="number" name="year">
     <p></p>
     <label for="month">Event month:</label>
-    <input type="text" name="month">
+    <input type="number" name="month">
     <p></p>
     <label for="day">Event day:</label>
-    <input type="text" name="day">
+    <input type="number" name="day">
     <p></p>
     <label for="hour">Event hour:</label>
-    <input type="text" name="hour">
+    <input type="number" name="hour">
     <p></p>
     <label for="minute">Event minute:</label>
-    <input type="text" name="minute">
-    
+    <input type="number" name="minute">
+     <p></p>
+    <input type="submit" name="Submit">
+    <p></p>
   </form>
 {% endblock %}
