add - as an option for create-event

--- a/views/create-event.html
+++ b/views/create-event.html
@@ -25,12 +25,14 @@
     <p></p>
     <label for="year">Event year:</label>
     <select name = "year">
+      <option value = "">-</option>
       <option value = '2015'>2015</option>
       <option value = '2016'>2016</option>
     </select>
     <p></p>
     <label for="month">Event month:</label>
     <select name = "month">
+      <option value = "">-</option>
       <option value = '0'>January</option>
       <option value = '1'>February</option>
       <option value = '2'>March</option>
@@ -47,6 +49,7 @@
     <p></p>
     <label for="day">Event day:</label>
     <select name = "day">
+      <option value = "">-</option>
       <option value = '1'>1</option>
       <option value = '2'>2</option>
       <option value = '3'>3</option>
@@ -82,6 +85,7 @@
     <p></p>
     <label for="hour">Event hour:</label>
     <select name = "hour">
+      <option value = "">-</option>
       <option value = '0'>0</option>
       <option value = '1'>1</option>
       <option value = '2'>2</option>
@@ -110,6 +114,7 @@
     <p></p>
     <label for="minute">Event minute:</label>
     <select name = "minute">
+      <option value = "">-</option>
       <option value = '0'>0</option>
       <option value = '30'>30</option>
     </select> 
