corrections to layout.html

--- a/views/about.html
+++ b/views/about.html
@@ -9,9 +9,9 @@
   
   This is our team:
   <p></p>
-   <span id="exuberant mallard-name">CEO: Miguel Bonilla</span>
+   <span id="exuberant mallard-name">Gustavo Fring</span>
    <p></p>
-   <img id="exuberant mallard-headshot" src="https://media.licdn.com/mpr/mpr/shrink_200_200/p/7/005/07a/23d/16b8916.jpg" height="100" width="100">
+   <img id="exuberant mallard-headshot" src="http://ih3.redbubble.net/image.14947250.1519/sticker,375x360.u1.png" height="100" width="100">
    <p></p>
    <span id="dull fish-name">CMO: Sergio Guillen</span>
    <p></p>
@@ -19,7 +19,7 @@
    <p></p>
    <span id="cooperative lemur-name">Mr. Rodrigo Perez</span>
    <p></p>
-   <img id="cooperative lemur-headshot" src="https://media.licdn.com/media/p/5/005/0b2/3bf/1048997.jpg" height="100" width="100">
+   <img id="cooperative lemur-headshot" src="http://www.glamour.com/images/entertainment/2013/09/saul-breaking-bad-main.jpg" height="130" width="100">
    <p></p>
   </p>
 </body>
