--- a/views/layout.html
+++ b/views/layout.html
@@ -7,8 +7,8 @@
   </head>
 
 	<body class="container">
-	  
-	  <img id = "logo" src = "http://img4.wikia.nocookie.net/__cb20130713042010/breakingbad/images/5/5c/Los_Pollos.png" height="180" width="200">
+
+	  <img id = "logo" src = "http://img4.wikia.nocookie.net/__cb20130713042010/breakingbad/images/5/5c/Los_Pollos.png" height="180" width="200" position=>
 
     {% block header %}
       <header>The best events in town</header>
@@ -20,7 +20,8 @@
 
     {% block footer %}
       <footer>
-        <a href="/about">About us </a> | <a href="/">Homepage</a> </footer>
+        <a href="/about">About us </a> | <a href="/">Homepage</a> 
+      </footer>
     {% endblock %}
 
   </body>
