--- a/views/about.html
+++ b/views/about.html
@@ -11,15 +11,15 @@
   <p></p>
    <span id="exuberant mallard-name">Gustavo Fring</span>
    <p></p>
-   <img id="exuberant mallard-headshot" src="http://ih3.redbubble.net/image.14947250.1519/sticker,375x360.u1.png" height="100" width="100">
+   <img id="exuberant mallard-headshot" src="http://s8.postimg.org/sl4bvufmd/Gustavo.png" height="130" width="100">
    <p></p>
-   <span id="dull fish-name">CMO: Sergio Guillen</span>
+   <span id="dull fish-name">Hank Schrader</span>
    <p></p>
-   <img id="dull fish-headshot" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xfp1/v/t1.0-1/c44.0.148.148/p148x148/10154100_10152779247334278_1023091902341473871_n.jpg?oh=57b6227fadbafa7ddc24f9da16204d7a&oe=555305F0&__gda__=1431792865_dad52f1ea7777857efe6256276af6700" height="100" width="100">
+   <img id="dull fish-headshot" src="http://s30.postimg.org/6upaowtwh/Hank.png" height="130" width="100">
    <p></p>
-   <span id="cooperative lemur-name">Better call Saul</span>
+   <span id="cooperative lemur-name">Saul Goodman</span>
    <p></p>
-   <img id="cooperative lemur-headshot" src="http://www.glamour.com/images/entertainment/2013/09/saul-breaking-bad-main.jpg" height="130" width="100">
+   <img id="cooperative lemur-headshot" src="http://s2.postimg.org/lgypjxohl/Saul.png" height="130" width="100">
    <p></p>
   </p>
 </body>
