--- a/views/layout.html
+++ b/views/layout.html
@@ -7,8 +7,14 @@
   </head>
 
 	<body class="container">
-	  <img id = "logo" src = "http://img4.wikia.nocookie.net/__cb20130713042010/breakingbad/images/5/5c/Los_Pollos.png" height="180" width="200" position=>
-
+	  <style>
+	   body {
+	     background-color: black;
+	     color: white;
+	   } 
+	  </style>
+	  <img id = "logo" src = "http://s24.postimg.org/dg1lmwo2t/Los_Pollos_Hermanos.png" height="150" width="600" position="center">
+	 
     {% block header %}
       <header>The best events in town</header>
     {% endblock %}
