added google analytics

--- a/views/about.html
+++ b/views/about.html
@@ -3,12 +3,14 @@
 {% block mainContent %}
 
 <body>
+
   <p>At Los Pollos Hermanos, we believe that gathering with others is the best way for people to learn, grow, get inspired, feel connected, get healthy, give back, and celebrate. So we're building technology that facilitates those gatherings, by helping people find and attend events that feed their interests, while connecting them with others who share their passions. 
   When we indulge our curiosity, events can transform us and make us better. We want everyone to join us in creating a world where we are encouraged to get out there and try new things, indulge in the things we love, and to express ourselves, improve ourselves and build our communities.
   We are here to bring people together.
   
   This is our team:
   <p></p>
+  <div class="center">
    <span id="exuberant mallard-name">Gustavo Fring</span>
    <p></p>
    <img id="exuberant mallard-headshot" src="http://s8.postimg.org/sl4bvufmd/Gustavo.png" height="130" width="100">
@@ -21,6 +23,7 @@
    <p></p>
    <img id="cooperative lemur-headshot" src="http://s2.postimg.org/lgypjxohl/Saul.png" height="130" width="100">
    <p></p>
+   </div>
   </p>
 </body>
 {% endblock %}
