--- a/views/layout.html
+++ b/views/layout.html
@@ -4,6 +4,15 @@
     <title>{{ title }}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css' />
+    <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        
+          ga('create', 'UA-59697259-1', 'auto');
+          ga('send', 'pageview');
+    </script>
   </head>
 
 	<body class="container">
@@ -13,7 +22,7 @@
 	     color: white;
 	   } 
 	  </style>
-	  <img id = "logo" src = "http://s24.postimg.org/dg1lmwo2t/Los_Pollos_Hermanos.png" height="150" width="600" position="center">
+	  <img id = "logo" src = "http://s24.postimg.org/dg1lmwo2t/Los_Pollos_Hermanos.png" height="140" width="600" style=position:"absolute"; left: 400>
 	 
     {% block header %}
       <header>The best events in town</header>
