--- a/views/event-detail.html
+++ b/views/event-detail.html
@@ -18,6 +18,12 @@
     <li class="email">
         {{email}}
     </li>
+    
+
+    1) should allow Yale users to RSVP
+    2) should reject RSVPs from Yale addresses   
+    
+    
   {% endfor %}
 </ul>
 </div>
