--- a/views/fragments/events-list.html
+++ b/views/fragments/events-list.html
@@ -3,10 +3,9 @@
     <li class="event" id="event-{{event.id}}">
     
       <a href="/events/{{event.id}}"> {{event.title}}</a>.
-      
-      
       <time datetime="{{event.date}}">{{event.date|prettyDate}}</time>
       {{event.attending.length}} attending so far.
+      <a href="/donation">Donations</a>
     </li>
   {% endfor %}
 </ul>
