--- a/views/fragments/events-list.html
+++ b/views/fragments/events-list.html
@@ -5,7 +5,7 @@
       <a href="/events/{{event.id}}"> {{event.title}}</a>.
       <time datetime="{{event.date}}">{{event.date|prettyDate}}</time>
       {{event.attending.length}} attending so far.
-      <a href="/donation">Donations</a>
+      <a href="/donation">Support</a>
     </li>
   {% endfor %}
 </ul>
